# linf_pipeline

./: .env.example  .gitignore  .~lock.dados.ods#  .~lock.tarefas.ods#  README.md  config.py  custom_type.py  dados.ods  dados.xlsx  dev.ps1  docker-compose.yaml  gui.py  lab.py  labtypes.py  log.py  main.py  manage.py  models.py  pericia_generator.py  pericias.py  plot.py  pyproject.toml  recursos.py  repo.py  runall.ps1  runall.sh  sheets.py  sim.ps1  simulation.py  term.py  test.py  thread.py  watch.py  ~$dados.xlsx
gui/: equipments_table.py  finished_form.py  gui.py  main_window.py  main_window.ui  main_window_ui.py  simulation_thread.py  thread.py  ui_helpers.py
local/: pericias.db
