[project]
name = "linf-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "blessed>=1.20.0",
    "click>=8.1.8",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "python-calamine>=0.3.1",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy[mypy]>=2.0.38",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.241126",
    "types-sqlalchemy-utils>=1.1.0",
    "types-tqdm>=4.67.0.20250301",
]
